--- a/Sokoban/Sokoban.csproj
+++ b/Sokoban/Sokoban.csproj
@@ -61,6 +61,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="SDParser.sequencediagram" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SDParser.sequencediagram.layout">
+      <DependentUpon>SDParser.sequencediagram</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
